imports/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

@keyframes gradientAnimation {
    0% { background-position: 0 50%; }
    50% { background-position: 100% 50%; }
    100% { background-position: 0 50%; }
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: black;
    background-size: 400% 400%;
    padding: 1rem;
}

.header-title {
    font-size: 2rem;
    font-weight: 700;
    color: #fff;
    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
}

.header-title a {
    color: white;
    text-decoration: none;
    font-weight: bold;
    transition: background 0.5s ease, color 0.5s ease;
    font-size: 0.9rem;
}

.header-title a:hover {
    background: linear-gradient(45deg, #ff9a9a, #f5a3b3, #bfa3f7, #a3b7fa);
    background-size: 200% 200%;
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
    animation: gradientAnimation 3s ease infinite;
    font-weight: bold;
    font-size: 1.1rem;
    transition: background 0.5s ease, color 0.5s ease, font-size 0.5s ease;
}
.social-icons {
    display: flex;
    gap: 15px;

}

.social-icons img {
    width: 30px;
    height: 30px;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.social-icons img:hover {
    transform: scale(1.1);
}

.social-icons a {
    color: white;
    text-decoration: none;
    transition: background 0.5s ease, color 0.5s ease;
    font-weight: bold;
}

.social-icons a:hover {
    background: linear-gradient(45deg, #ff7f50, #ff6347, #ff4500, #ff8c00);
    background-size: 200% 200%;
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
    animation: gradientAnimation 3s ease infinite;
    font-weight: bold;
    font-size: 1.1rem;
    transition: background 0.5s ease, color 0.5s ease, font-size 0.5s ease;
}

body {
    font-family: 'Roboto', Arial, sans-serif;
    line-height: 1.6;
    color: #fff;
    height: 100vh;
    margin: 0;
    padding: 0;
    background: linear-gradient(-45deg, rgba(238, 119, 82, 0.8), rgba(231, 60, 126, 0.8), rgba(35, 166, 213, 0.8), rgba(35, 213, 171, 0.8));
    background-size: 400% 400%;
    animation: gradientAnimation 100s ease infinite;
}

footer {
    background-color: black;
    color: white;
    text-align: center;
    padding: 5px 10px;
    font-size: 12px;
    position: fixed;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

nav ul {
    list-style-type: none;
    padding: 0;
}

nav ul li {
    display: inline;
    margin-right: 20px;
}

nav ul li a {
    color: white;
    text-decoration: none;
    font-weight: 400;
    transition: color 0.3s ease;
}

nav ul li a:hover {
    color: #e0e0e0;
}

main {
    padding: 20px;
    max-width: 1400px;
    margin: 0 auto;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.name-title {
    font-size: 3.5rem;
    font-weight: 700;
    text-align: center;
    margin-top: 2rem;
    color: #fff;
    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 700;
    color: #fff;
    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
}

p, li, label, input, textarea {
    font-weight: 300;
}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 20px;
}

.grid-item {
    background-color: rgba(244, 244, 244, 0.8);
    padding: 20px;
    text-align: center;
}

form {
    display: flex;
    flex-direction: column;
    max-width: 300px;
    margin: 0 auto;
}

input, textarea, button {
    margin-bottom: 10px;
    padding: 10px;
}

button {
    background-color: #5e9ca0;
    color: white;
    border: none;
    cursor: pointer;
    padding: 10px 20px;
    font-size: 1rem;
    transition: background-color 0.3s ease;
}

button:hover {
    background-color: #4a7d80;
}

input[type="email"], textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 4px;
    background-color: rgba(255, 255, 255, 0.1);
    color: #fff;
    font-size: 16px;
}

input[type="email"]::placeholder, textarea::placeholder {
    color: rgba(255, 255, 255, 0.7);
}

input[type="email"]:focus, textarea:focus {
    outline: none;
    background-color: rgba(255, 255, 255, 0.2);
    border-color: rgba(255, 255, 255, 0.5);
}

button[type="submit"] {
    background-color: rgba(255, 255, 255, 0.2);
    color: #fff;
    border: none;
    padding: 10px 20px;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s ease;
}

button[type="submit"]:hover {
    background-color: rgba(255, 255, 255, 0.3);
}

/* Not making move the cards */
.social-icons {
    display: flex;
    gap: 15px;
    position: absolute; /* Make the social-icons section positioned absolutely */
    top: 50%; /* Adjust the top position as needed */
    left: 50%; /* Adjust the left position as needed */
    transform: translate(-50%, -50%); /* Center the social-icons section */
}

#card {
    padding: 2rem; /* Use rem units for padding */
    margin-top: 2rem; /* Use rem units for margin */
    position: relative; /* Ensure the card section is positioned relative */
}

#about, #home, #social {
    padding: 2rem; /* Use rem units for padding */
    margin-bottom: 2rem; /* Use rem units for margin */
    position: relative; /* Ensure these sections are positioned relative */
}

